--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-python-docx = "*"
+gTTS = "2.1.1"
+jinja2 = "*"
+pdfkit = "*"
 
 [requires]
 python_version = "3.8"
